--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "cors": "^2.8.5",
+    "crypto-browserify": "^3.12.0",
     "dotenv": "^16.4.5",
+    "fs": "^0.0.1-security",
+    "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
+    "polyfill": "^0.1.0",
     "react": "^18.3.1",
+    "react-app-polyfill": "^3.0.0",
     "react-audio-visualize": "^1.1.3",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
@@ -38,6 +44,9 @@
       "react-app/jest"
     ]
   },
+  "browser": {
+    "fs": false
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -50,7 +59,4 @@
       "last 1 safari version"
     ]
   }
-
 }
-
-
