--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.4.5",
     "fs": "^0.0.1-security",
+    "fs.promises": "^0.1.2",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "polyfill": "^0.1.0",
